--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/accountSettings.less
@@ -61,6 +61,9 @@
                 font-size: 18px;
             }
         }
+        .action-btn{
+            margin-left:10px
+        }
     }
 
     .change-uni, h2 {
@@ -286,13 +289,6 @@
                 -webkit-flex: 0 0 auto;
                 -ms-flex: 0 0 auto;
                 flex: 0 0 auto;
-            }
-
-            button {
-                min-height: 0;
-                line-height: initial;
-                min-width: 0;
-                padding: 3px 15px;
             }
         }
     }
