--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
@@ -24,12 +24,12 @@
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = @AccountSettingsResources.ConfirmPassword })
             </div>
             <div class="form-actions">
-                <a href="@Url.Action("index","home")" class="btn btn-default pull-right">
-                    @GeneralResources.Cancel
-                </a>
-                <button type="submit" class="btn button-Blue btn-primary pull-right">
+                <button type="submit" class="action-btn pull-right">
                     @GeneralResources.Submit
                 </button>
+                <a href="@Url.Action("index","home")" class="cancel-btn pull-right">
+                    @GeneralResources.Cancel
+                </a>
             </div>
             <div class="create-account"></div>
         }
