--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -176,7 +176,7 @@
                                     @*@Html.Svg(url, "dropbox", new {@class = "dropbox"})*@
                                 </button>
                             </div>
-                            <button type="submit" class="btn button-Blue btn-primary text-uppercase post-comment" ng-disabled="f.add.disabled" ga-track-event="['box-feed', 'postReply']">
+                            <button type="submit" class="action-btn no-text post-comment" ng-disabled="f.add.disabled" ga-track-event="['box-feed', 'postReply']">
                                 <md-icon md-svg-icon="u:post"></md-icon>
                                 @*@Html.Svg(url, "post")*@
                             </button>
