--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
@@ -693,22 +693,22 @@ Page Loading
 .unreg-user .close-wrapper button.close {
   padding: 18px;
   border-radius: 50%;
-  background: black;
   position: absolute;
   top: -30px;
   right: 0;
+  background: #eeeeee;
 }
-.unreg-user .close-wrapper button.close svg {
-  width: 30px;
-  height: 30px;
-  fill: white;
+.unreg-user .close-wrapper button.close md-icon {
+  width: 24px;
+  height: 24px;
+  fill: #323538;
 }
 @media (max-width: 600px) {
   .unreg-user .close-wrapper button.close {
     padding: 15px;
     top: -18px;
   }
-  .unreg-user .close-wrapper button.close svg {
+  .unreg-user .close-wrapper button.close md-icon {
     width: 15px;
     height: 15px;
   }
@@ -716,7 +716,7 @@ Page Loading
 .unreg-user .content-wrapper {
   position: relative;
   display: block;
-  background: black;
+  background: #eeeeee;
   /*.displayFlex();
         .align-items(center);*/
 }
