--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.rtl.css
@@ -237,11 +237,11 @@
 }
 .quizPage .score-details .correct svg {
   margin-right: 5px;
-  fill: #007e01;
+  fill: #007E01;
 }
 .quizPage .score-details .wrong md-icon {
   width: 45px;
-  fill: #be2a4a;
+  fill: #BE2A4A;
   margin-left: 5px;
 }
 .quizPage .score-details md-icon {
@@ -266,10 +266,10 @@
 }
 .quizPage .time-taken {
   font-size: 36px;
-  color: #2698d4;
+  color: #2698D4;
 }
 .quizPage .time-taken md-icon {
-  fill: #2698d4;
+  fill: #2698D4;
   width: 46px;
   height: 52px;
   vertical-align: middle;
@@ -300,7 +300,7 @@
   margin: 0 10px 0 0;
 }
 .quiz-question .index {
-  color: #2698d4;
+  color: #2698D4;
 }
 .quiz-question .q {
   display: -webkit-flex;
@@ -321,7 +321,7 @@
 .quiz-question .q-actions svg {
   width: 16px;
   height: 16px;
-  fill: #484f56;
+  fill: #484F56;
 }
 .quiz-question:hover .q-actions {
   visibility: visible;
@@ -339,7 +339,7 @@
   border-radius: 50%;
   font-size: 20px;
   border: 2px solid #3598dc;
-  color: #2698d4;
+  color: #2698D4;
 }
 .quiz-question .circle {
   padding: 10px;
@@ -359,7 +359,7 @@
   margin-left: 50px;
 }
 .quiz-question .answer-selected {
-  background: #3293f6;
+  background: #3293F6;
   color: #ffffff;
 }
 .quiz-challenge {
@@ -446,10 +446,10 @@
   margin: auto;
 }
 .quiz-challenge .complete svg {
-  fill: #9782b1;
+  fill: #9782B1;
 }
 .quiz-challenge .ranking svg {
-  fill: #f76446;
+  fill: #F76446;
 }
 .quiz-challenge .buttons {
   margin: 0 auto;
@@ -470,7 +470,7 @@
   }
 }
 .quiz-challenge .buttons .scared {
-  background: #9e9e9e;
+  background: #9E9E9E;
   color: #ffffff;
 }
 .md-open-menu-container {
@@ -508,7 +508,7 @@
   display: block;
 }
 .quiz-wrapper.no-answer .correct-answer {
-  background: #3293f6;
+  background: #3293F6;
   color: #ffffff;
 }
 .quiz-wrapper.no-answer .correct-answer:before {
