--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
@@ -22,8 +22,8 @@
                 </div>
             </md-input-container>
             <div class="text-right">
-                <button type="reset" class="btn grey" ng-click="app.resetForm(passwordForm)" ga-track-event="['password', 'cancel password changes']">@GeneralResources.Cancel</button>
-                <button type="submit" class="btn blue" ng-disabled="!passwordForm.$valid" ga-track-event="['password', 'save password changes']">@GeneralResources.SaveChanges</button>
+                <button type="reset" class="cancel-btn" ng-click="app.resetForm(passwordForm)" ga-track-event="['password', 'cancel password changes']">@GeneralResources.Cancel</button>
+                <button type="submit" class="action-btn space-left" ng-disabled="!passwordForm.$valid" ga-track-event="['password', 'save password changes']">@GeneralResources.SaveChanges</button>
             </div>
         </form>
     </div>
