--- a/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Chat/Index.cshtml
@@ -103,7 +103,7 @@
                             <md-input-container md-no-float="false">
                                 <textarea md-no-asterisk autofocus enter-submit="cv.send()" autocomplete="off" type="text" maxlength="16000" required ng-model="cv.newText" placeholder="@ChatResources.NewMessagePlaceholder"></textarea>
                             </md-input-container>
-                            <button type="submit" class="btn blue-button" ng-disabled="cv.disabled" ga-track-event="['chat', 'sent-message']">
+                            <button type="submit" class="action-btn no-text" ng-disabled="cv.disabled" ga-track-event="['chat', 'sent-message']">
                                 <md-icon md-svg-icon="u:post"></md-icon>
                                 @*@Html.Svg("~/images/site/uploadIcons.svg", "post")*@
                             </button>
